Add publication and project info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,58 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
+@article{upa1,
+  abbr={PNAS},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
+  title={First Global Scale Assessment of Urban Precipitation Anomalies},
+  author={Sui, X., Yang, Z., Shepherd, M., and Niyogi, D.},
+  journal={Proceedings of the National Academy of Sciences, submitted},
+  year={2023},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{BrownOcean,
+  abbr={GRL},
+  title={Studying Brown Ocean Re-Intensification of Hurricane Florence Using CYGNSS and SMAP Soil Moisture Data and a Numerical Weather Model},
+  author={Li, Z., Tiwari, A., Sui, X., Garrison, J., Marks, F. and Niyogi, D.},
+  journal={Geophysical Research Letters},
+  volume={50},
+  issue={19},
+  year={2023},
+  doi={10.1029/2023GL105102},
+  html={https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2023GL105102}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{LID,
+  abbr={J. Hydrol.},
+  title={The influence of Low Impact Development (LID) on basin runoff in a half-urbanized catchment: A case study in San Antonio, Texas},
+  author={Sui, X. and van de Ven, F.H.},
+  journal={Journal of Hydrology},
+  volume={616},
+  year={2023},
+  doi={10.1016/j.jhydrol.2022.128793},
+  html={https://www.sciencedirect.com/science/article/pii/S0022169422013634},
+  selected={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{DT,
+  abbr={RSE},
+  title={Disentangling error structures of precipitation datasets using decision trees},
+  author={Sui, X., Li, Z., Tang, G., Yang, Z.L. and Niyogi, D.},
+  abstract={Characterizing error structures in precipitation products not only facilitates their proper applications for scientific and practical purposes but also helps improve their retrieval algorithms and processing methods. Despite the fact that multiple precipitation products have been assessed in the literature, factors that affect their error structures remain inadequately addressed. By interpreting 60 binary decision trees, this study disentangles the error characteristics of precipitation products in terms of their spatiotemporal patterns and geographical factors. Three independent precipitation products - two satellite-based and one reanalysis datasets: the Integrated Multi-satellitE Retrievals for GPM (Global Precipitation Measurement) late run (IMERG-L), Soil Moisture to Rain-Advanced SCATterometer (SM2RAIN-ASCAT), and the Modern-Era Retrospective analysis for Research and Applications, Version 2 uncorrected precipitation output (MERRA2-UC), are evaluated across the contiguous United States from 2010 to 2019. The ground-based Stage IV precipitation dataset is used as the ground truth. Results indicate that the MERRA2-UC outperforms the IMERG-L and SM2RAIN-ASCAT with higher accuracy and more stable interannual patterns for the analysis period. Decision trees cross-assess three spatiotemporal factors and find that the underestimation of MERRA2-UC occurs in the east of the Rocky Mountains, and SM2RAIN-ASCAT underestimates precipitation over high latitudes, especially in winter. Additionally, the decision tree method ascribes system errors to nine different geographical characteristics, of which the distance to the coast, soil type, and DEM are the three dominant features. On the other hand, the land cover type, topography position index, and aspect are three relatively weak factors.},
+  journal={Remote Sensing of Environment},
+  year={2022},
+  doi={10.1016/j.rse.2022.113185},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0034425722002978},
+  selected={true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{IMERGevaluation,
+  title={Ground validation and error sources identification for GPM IMERG product over the southeast coastal regions of China},
+  author={Sui, X., Li, Z., Ma, Z., Xu, J., Zhu, S. and Liu, H.},
+  journal={Remote Sensing},
+  year={2020},
+  doi={10.3390/rs12244154},
+  html={https://www.mdpi.com/2072-4292/12/24/4154}
 }
+
